[package]
name = "centurion"
version = "0.0.0"
authors = ["Cameron Howell <jango.djarin@proton.me>"]
description = "A GUI simulation management application adhering to the IEEE 1278.1-2012 DIS Standard."
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crhowell3/centurion"
keywords = ["DIS", "IEEE", "GUI"]
rust-version = "1.82"

[dependencies]
skrifa = "0.26.2"
notify-rust = "4"
chrono = { version = "0.4", features = ['serde'] }
fern = "0.6.1"
iced = { version = "0.13.1", default-features = false, features = [
    "wgpu",
    "tiny-skia",
    "fira-sans",
    "tokio",
    "lazy",
    "advanced",
    "image",
    "multi-window",
] }
log = "0.4.16"
once_cell = "1.18"
palette = "0.7.4"
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["rt", "fs", "process"] }
unicode-segmentation = "1.6"
open = "5.0.1"
bytesize = "1.3.0"
timeago = "0.4.2"
futures = "0.3.30"
itertools = "0.13.0"
rodio = "0.19.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
open-dis-rust = "0.1.1"

[patch.crates-io]
iced_core = { git = "https://github.com/iced-rs/iced", rev = "88a2fac1f9171f162ecfe2a033cba5ae62e23231" }
